checker/tests/parsing/errors/empty_needs_body.mft
trait T {
  needs Foo {};
}
=== error ===
Unrecognized token `}` found at 23:24
Expected one of "identifier"